--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <br>
         <h1 class="text-center text-black">RAM CHOUDHARY</h1>
         <br>
-        <p class="text-center fw-bold">7 YEARS EXPERIENCE 🔥 115 Crore + Winner🥳 <br> BEST Fantasy Cricket Tips and Match Predictions 🔥 <br> ❤️ ALL Teams Support 🙏</p>
+        <!-- <p class="text-center fw-bold">7 YEARS EXPERIENCE 🔥 115 Crore + Winner🥳 <br> BEST Fantasy Cricket Tips and Match Predictions 🔥 <br> ❤️ ALL Teams Support 🙏</p> -->
+        <p class="text-center fw-bold">𝟑𝟎𝟎+ 𝐆𝐋 & 𝐒𝐋 𝐖𝐈𝐍𝐍𝐈𝐍𝐆 𝐑𝐄𝐂𝐎𝐑𝐃𝐒.🔥🔥<br> 𝐄𝐕𝐄𝐑𝐘𝐃𝐀𝐘 𝐌𝐘 𝐏𝐑𝐈𝐌𝐄 𝐌𝐄𝐌𝐁𝐄𝐑𝐒 𝐖𝐎𝐍 𝐁𝐈𝐆 <br> 𝐀𝐌𝐎𝐔𝐍𝐓𝐒 ✅ 𝐖𝐄 𝐏𝐑𝐎𝐕𝐈𝐃𝐄 𝐁𝐄𝐒𝐓 𝐓𝐄𝐀𝐌 𝐅𝐎𝐑 <br> 𝐄𝐕𝐄𝐑𝐘 𝐂𝐑𝐈𝐂𝐊𝐄𝐓 𝐌𝐀𝐓𝐂𝐇 🏆</p>
         <br>
 
         <a href="https://t.me/+BkRBhSv0zlU2Mjll" class="btn btn-info mx-auto d-block w-75 text-white fw-bold fs-4"><i class="fa fa-telegram" aria-hidden="true"></i>Join Free Telegram Channel</a>
